--- a/package.json
+++ b/package.json
@@ -36,5 +36,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^7.18.0",
+    "eslint-plugin-import-quotes": "0.0.1",
+    "eslint-plugin-react": "^7.22.0"
   }
 }
