--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,17 +1,28 @@
 {
   "manifest_version": 2,
-  "name": "Copy Text",
-  "version": "0.0.1",
+  "name": "Copy Cat",
+  "version": "1.0.0",
+
+  "icons": {
+    "16": "icon.png",
+    "48": "icon.png",
+    "128": "icon.png"
+  },
 
   "background": {
     "persistent": false,
     "scripts": ["background.js"]
   },
 
-  "browser_action": {},
+  "browser_action": {
+    "default_icon": {
+      "16": "icon.png",
+      "48": "icon.png",
+      "128": "icon.png"
+    }
+  },
 
   "permissions": [
-    "tabs",
     "storage"
   ]
 }
